# group4-air-quality

./: .containerignore  .dockerignore  .env.example  .gitignore  Containerfile  README.md  index.html  package-lock.json  package.json  podman-compose.yml  tailwind.config.js  vite.config.ts
.playwright-mcp/: page-2026-05-14T01-55-19-790Z.yml  page-2026-05-14T01-56-24-811Z.yml
backend/: .dockerignore  .env.example  Containerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_init.py  20260513_0002_client_locations.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  client.py  feed.py  health.py  stations.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: __init__.py  client_location.py  forecast.py  reading.py  station.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: client.py  feed.py
backend/app/services/: aqi.py  ingestion.py  openmeteo.py  waqi.py
deploy/: README.md  nginx.conf
src/: App.css  App.tsx  index.css  main.tsx
src/components/dashboard/: DashboardSkeleton.tsx  ForecastCards.tsx  HeroAQI.tsx  PollutantCard.tsx  PollutantGrid.tsx  PollutantTable.tsx  StationHistoryChart.tsx  TrendChart.tsx  (+2 more)
src/hooks/: useAQIData.ts  useClientLocation.ts  useGeolocation.ts  useTheme.ts  useUserProfile.ts
src/lib/: aqi-utils.ts  client-location-api.ts  client-location.ts  constants.ts  forecast-utils.ts  openmeteo-api.ts  waqi-api.ts
src/mocks/: jakarta.ts
src/pages/: DashboardPage.tsx  MapPage.tsx  StationPage.tsx
src/types/: profile.ts  waqi.ts
(+19 files in other folders)
